--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">72 Baldwin Ave · Jersey City, NJ 07306 · (646) 258-8267 ·
-            <a href="mailto:name@email.com">rga281@nyu.edu</a>
+          <div class="subheading mb-5">72 Baldwin Ave, Jersey City, NJ 07306 · (646) 258-8267 ·
+            <a href="mailto:rga281@nyu.edu">rga281@nyu.edu</a>
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <ul class="list-inline list-social-icons mb-0">
@@ -258,7 +258,7 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
@@ -291,7 +291,7 @@
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
     </div>
 
