--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger"></a>
+              </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
