--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           <div class="subheading mb-5">72 Baldwin Ave, Jersey City, NJ 07306 · (646) 258-8267 ·
             <a href="mailto:rga281@nyu.edu">rga281@nyu.edu</a>
           </div>
-          <p class="mb-5">I am a Graduate Student pursuing Masters in Computer Science at Courant Institute of Mathematical Sciences at NYU.</p>
+          <p class="mb-5">I am a Graduate Student pursuing Masters in Computer Science at <a href="https://cs.nyu.edu/home/index.html">Courant Institute of Mathematical Sciences</a> at NYU.</p>
+          <p class="mb-5">Email me for my resume.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/rajathalex/">
