--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
           <div class="subheading mb-5">72 Baldwin Ave, Jersey City, NJ 07306 · (646) 258-8267 ·
             <a href="mailto:rga281@nyu.edu">rga281@nyu.edu</a>
           </div>
-          <p class="mb-5">I am a Graduate Student pursuing Masters in Computer Science at <a href="https://cs.nyu.edu/home/index.html">Courant Institute of Mathematical Sciences</a> at NYU.</p>
-          <p class="mb-5">Email me for my resume.</p>
+          <p class="mb-5">I am a Graduate Student pursuing Masters in Computer Science at <a href="https://cs.nyu.edu/home/index.html">Courant Institute of Mathematical Sciences</a> at <a href="https://www.nyu.edu/">NYU</a>. <br /> Email me for my resume.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/rajathalex/">
+                  <a href="https://www.linkedin.com/in/rajathalex/" target="_blank">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -83,7 +82,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://github.com/rajathalex">
+                    <a href="https://github.com/rajathalex" target="_blank">
                       <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -91,7 +90,7 @@
                     </a>
                   </li>
             <li class="list-inline-item">
-              <a href="https://medium.com/@rajathalex/latest">
+              <a href="https://medium.com/@rajathalex/latest" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
