Added more content

--- a/index.html
+++ b/index.html
@@ -68,10 +68,14 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">72 Baldwin Ave, Jersey City, NJ 07306 · (646) 258-8267 ·
-            <a href="mailto:rga281@nyu.edu">rga281@nyu.edu</a>
+          <div class="subheading mb-5">MS in Computer Science @ NYU Courant · Software Engineer · Blockchain Developer · Writer 
+      
           </div>
-          <p class="mb-5">I am a Graduate Student pursuing Masters in Computer Science at <a href="https://cs.nyu.edu/home/index.html">Courant Institute of Mathematical Sciences</a> at <a href="https://www.nyu.edu/">NYU</a>. <br /> Email me for my resume.</p>
+          <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>. 
+            <br /> I have 2 years of experience as a Software Engineer in the financial industry.
+            <br /> I am a Writer at the Tech Publication '<a href="https://hackernoon.com/" target="_blank">Hackernoon</a>'.
+            <br /> My primary interests include Blockchain Technology, Cryptocurrencies, Cryptoeconomics, Distributed Systems, Cryptography, Network Security and Consensus Algorithms.
+            <br /> <a href="mailto:rga281@nyu.edu">Email me</a> for my resume.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/rajathalex/" target="_blank">
@@ -96,7 +100,15 @@
                   <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-            </li>            
+            </li>
+            <li class="list-inline-item">
+                <a href="https://twitter.com/rajath_alex" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>            
             
           </ul>
         </div>
