Removing certain content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Rajath George Alex</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,9 +72,6 @@
       
           </div>
           <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>. 
-            <br /> I have 2 years of experience as a Software Engineer in the financial industry.
-            <br /> I am a Writer at the Tech Publication '<a href="https://hackernoon.com/" target="_blank">Hackernoon</a>'.
-            <br /> My primary interests include Blockchain Technology, Cryptocurrencies, Cryptoeconomics, Distributed Systems, Cryptography, Network Security and Consensus Algorithms.
             <br /> <a href="mailto:rga281@nyu.edu">Email me</a> for my resume.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
