Added Udemy link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">MS in Computer Science @ NYU Courant · Software Engineer · Blockchain Developer · Writer 
+          <div class="subheading mb-5">MS in Computer Science @ NYU Courant · Software Engineer · Blockchain Developer · Writer · Instructor 
       
           </div>
           <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>. 
@@ -105,7 +105,16 @@
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
-              </li>            
+              </li>  
+              <li class="list-inline-item">
+                  <a href="https://www.udemy.com/user/rajath-george-alex/" target="_blank">
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-university fa-stack-1x fa-inverse"></i>
+                    </span>
+                  </a>
+                </li>  
+
             
           </ul>
         </div>
