--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">Graduate Researcher @ NYU Courant · Blockchain Engineer · Distributed Systems & Applied Cryptography
+          <div class="subheading mb-5">Research @ Tezos · Blockchain Engineer · Distributed Systems & Applied Cryptography
       
           </div>
           <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>. 
