Commented out Udemy

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                   </span>
                 </a>
               </li>  
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                   <a href="https://www.udemy.com/user/rajath-george-alex/" target="_blank">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-university fa-stack-1x fa-inverse"></i>
                     </span>
                   </a>
-                </li>  
+                </li>   -->
 
             
           </ul>
