--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">Research @ Tezos · Blockchain Engineer · Distributed Systems & Applied Cryptography
+          <div class="subheading mb-5">Software Engineer @ Chainalysis · Blockchain Systems · Data Acquisition & Feature Engineering 
       
           </div>
-          <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>. 
+          <p class="mb-5">I am currently a Software Engineer at <a href="https://www.chainalysis.com/" target="_blank">Chainalysis</a>. 
+          <!-- <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>.  -->
             <br /> <a href="mailto:rga281@nyu.edu">Email me</a> for my resume.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
