--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">Software Engineer @ Chainalysis · Blockchain Systems · Data Acquisition & Feature Engineering 
+          <div class="subheading mb-5">Senior Software Engineer @ Chainalysis · Crypto Systems 
       
           </div>
-          <p class="mb-5">I am currently a Software Engineer at <a href="https://www.chainalysis.com/" target="_blank">Chainalysis</a>. 
+          <p class="mb-5">I am currently a Senior Software Engineer at <a href="https://www.chainalysis.com/" target="_blank">Chainalysis</a>. 
           <!-- <p class="mb-5">I am currently a Graduate Student pursuing Masters in Computer Science at the <a href="https://cs.nyu.edu/home/index.html" target="_blank">Courant Institute of Mathematical Sciences</a> in <a href="https://www.nyu.edu/" target="_blank">NYU</a>.  -->
-            <br /> <a href="mailto:rga281@nyu.edu">Email me</a> for my resume.</p>
+            <br /> <a href="mailto:rajathalex@gmail.com">Email me</a> for my resume.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/rajathalex/" target="_blank">
@@ -66,39 +66,29 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://github.com/rajathalex" target="_blank">
+                  <a href="https://twitter.com/0xrajath" target="_blank">
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                    </span>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://0xrajath.medium.com/" target="_blank">
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+                    </span>
+                  </a>
+                </li>  
+                <li class="list-inline-item">
+                    <a href="https://github.com/0xrajath" target="_blank">
                       <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                       </span>
                     </a>
                   </li>
-            <li class="list-inline-item">
-              <a href="https://medium.com/@rajathalex/latest" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-                <a href="https://twitter.com/rajath_alex" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>  
-              <!-- <li class="list-inline-item">
-                  <a href="https://www.udemy.com/user/rajath-george-alex/" target="_blank">
-                    <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa fa-university fa-stack-1x fa-inverse"></i>
-                    </span>
-                  </a>
-                </li>   -->
-
-            
           </ul>
         </div>
       </section>
