--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 class="mb-0">Rajath George
             <span class="text-primary">Alex</span>
           </h1>
-          <div class="subheading mb-5">Software Engineer · Crypto Systems 
+          <div class="subheading mb-5">Crypto and Engineering @ Chainalysis
       
           </div>
           <p class="mb-5">I am currently a Senior Software Engineer at <a href="https://www.chainalysis.com/" target="_blank">Chainalysis</a>. 
