--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <div class="subheading mb-5">Software Engineer | Crypto Systems
       
           </div>
-          <p class="mb-5">Working on something new in Crypto. Previously engineering <a href="https://www.chainalysis.com/" target="_blank">@Chainalysis</a> <a href="https://www.fidelity.com/" target="_blank">@Fidelity</a>. 
-            <br /> <a href="mailto:rajathalex@gmail.com">Email me</a> for my resume.</p>
+          <p class="mb-5">Founding Engineer <a href="https://llama.xyz/" target="_blank">@Llama</a>. Previously engineering <a href="https://www.chainalysis.com/" target="_blank">@Chainalysis</a> <a href="https://www.fidelity.com/" target="_blank">@Fidelity</a>. 
+            <br /> <a href="mailto:rajathalex@gmail.com">Email me</a> to connect.</p>
           <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/rajathalex/" target="_blank">
